fixed bugs and added animations

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
       <div class="container">
         <div class="brand-section">
           <h2><span> P</span>ortfolio</h2>
-          <!-- <img id="logo" src="/icons/logo.png" alt="" srcset="" /> -->
         </div>
         <nav class="navbar">
           <ul class="nav-menu">
-            <li class="nav-link"><a href="#home" class="active">Home</a></li>
+            <li class="nav-link"><a href="#" class="active">Home</a></li>
             <li class="nav-link"><a href="#about-section">About</a></li>
             <li class="nav-link"><a href="#projects">Projects</a></li>
             <li class="nav-link"><a href="#contact">Contact</a></li>
@@ -40,9 +39,9 @@
     </header>
 
     <main>
-      <section id="home" class="hero-section">
+      <section id="" class="hero-section">
         <div class="container grid grid-two--cols">
-          <div class="hero-content">
+          <div class="hero-content" data-aos="fade-right" data-aos-delay="50">
             <h3 class="sub-heading"><span>Hello,</span> It's Me</h3>
             <h1 class="main-heading">Sameer Acharya</h1>
             <h3 class="sub-heading">
@@ -55,19 +54,30 @@
             </p>
 
             <div class="social-icons">
-              <a href=""
+              <a
+                href="https://www.facebook.com/samir.acharya.7923"
+                target="_blank"
                 ><i class="fa-social--icon fa-brands fa-facebook-f"></i
               ></a>
-              <a href=""
+              <a
+                href="https://www.linkedin.com/in/samir-acharya-75573a29b/"
+                target="_blank"
                 ><i class="fa-social--icon fa-brands fa-linkedin-in"></i
               ></a>
-              <a href=""><i class="fa-social--icon fa-brands fa-github"></i></a>
+              <a href="https://github.com/Samirpopstar/" target="_blank"
+                ><i class="fa-social--icon fa-brands fa-github"></i
+              ></a>
             </div>
 
             <a class="download-btn" download href="hello.txt"> Download CV </a>
           </div>
           <div class="hero-image">
-            <img src="/assets/undraw_Programming_re_kg9v.png" alt="" />
+            <img
+              data-aos="fade-left"
+              data-aos-delay="50"
+              src="/assets/undraw_Programming_re_kg9v.png"
+              alt=""
+            />
           </div>
         </div>
       </section>
@@ -101,7 +111,7 @@
         <div class="about-image">
           <img src="/images/about-img.jpg" alt="" srcset="" />
         </div>
-        <div class="about-content">
+        <div class="about-content" data-aos="fade-right">
           <h2 class="title-heading"><span>About Me</span></h2>
           <p class="para about-para">
             I'm a passionate web developer currently pursuing my studies in BCA.
@@ -126,15 +136,25 @@
         <h2 class="title-heading projects-heading"><span>My Projects</span></h2>
       </div>
       <div class="projects-cards container">
-        <div class="project-card">
+        <div class="project-card" data-aos="fade-up" data-aos-delay="100">
           <div class="projects-description">
-            <img src="/assets/project-2.png" alt="" class="project-img" />
+            <img src="/assets/project-1.png" alt="" class="project-img" />
             <div class="layer">
               <p class="projects-icons">
-                <i class="fa-projects fa-brands fa-github"></i>
-                <i
-                  class="fa-projects fa-solid fa-arrow-up-right-from-square"
-                ></i>
+                <a
+                  href="https://github.com/Samirpopstar/Eduhub-Project"
+                  target="_blank"
+                  ><i class="fa-projects fa-brands fa-github"></i
+                ></a>
+
+                <a
+                  href="https://samirpopstar.github.io/Eduhub-Project/"
+                  target="_blank"
+                >
+                  <i
+                    class="fa-projects fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
               </p>
               <div class="project-tech">
                 <div class="project-tech--stack">Html</div>
@@ -146,15 +166,25 @@
           <p class="card-description">EduHub App</p>
         </div>
 
-        <div class="project-card">
+        <div class="project-card" data-aos="fade-up" data-aos-delay="2 00">
           <div class="projects-description">
-            <img src="/assets/project-2.png" alt="" class="project-img" />
+            <img src="/assets/project-1.png" alt="" class="project-img" />
             <div class="layer">
               <p class="projects-icons">
-                <i class="fa-projects fa-brands fa-github"></i>
-                <i
-                  class="fa-projects fa-solid fa-arrow-up-right-from-square"
-                ></i>
+                <a
+                  href="https://github.com/Samirpopstar/Eduhub-Project"
+                  target="_blank"
+                  ><i class="fa-projects fa-brands fa-github"></i
+                ></a>
+
+                <a
+                  href="https://samirpopstar.github.io/Eduhub-Project/"
+                  target="_blank"
+                >
+                  <i
+                    class="fa-projects fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
               </p>
               <div class="project-tech">
                 <div class="project-tech--stack">Html</div>
@@ -163,18 +193,28 @@
               </div>
             </div>
           </div>
-          <p class="card-description">Online Education App</p>
+          <p class="card-description">EduHub App</p>
         </div>
 
-        <div class="project-card">
+        <div class="project-card" data-aos="fade-up" data-aos-delay="300">
           <div class="projects-description">
-            <img src="/assets/project-2.png" alt="" class="project-img" />
+            <img src="/assets/project-1.png" alt="" class="project-img" />
             <div class="layer">
               <p class="projects-icons">
-                <i class="fa-projects fa-brands fa-github"></i>
-                <i
-                  class="fa-projects fa-solid fa-arrow-up-right-from-square"
-                ></i>
+                <a
+                  href="https://github.com/Samirpopstar/Eduhub-Project"
+                  target="_blank"
+                  ><i class="fa-projects fa-brands fa-github"></i
+                ></a>
+
+                <a
+                  href="https://samirpopstar.github.io/Eduhub-Project/"
+                  target="_blank"
+                >
+                  <i
+                    class="fa-projects fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
               </p>
               <div class="project-tech">
                 <div class="project-tech--stack">Html</div>
@@ -183,7 +223,7 @@
               </div>
             </div>
           </div>
-          <p class="card-description">Online Education App</p>
+          <p class="card-description">EduHub App</p>
         </div>
       </div>
     </section>
