--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <section id="" class="hero-section">
         <div class="container grid grid-two--cols">
-          <div class="hero-content" data-aos="fade-right" data-aos-delay="50">
+          <div class="hero-content" data-aos="fade-right">
             <h3 class="sub-heading"><span>Hello,</span> It's Me</h3>
             <h1 class="main-heading">Sameer Acharya</h1>
             <h3 class="sub-heading">
@@ -166,7 +166,7 @@
           <p class="card-description">EduHub App</p>
         </div>
 
-        <div class="project-card" data-aos="fade-up" data-aos-delay="2 00">
+        <div class="project-card" data-aos="fade-up" data-aos-delay="200">
           <div class="projects-description">
             <img src="/assets/project-1.png" alt="" class="project-img" />
             <div class="layer">
