--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <img
               data-aos="fade-left"
               data-aos-delay="50"
-              src="/assets/undraw_Programming_re_kg9v.png"
+              src="/assets/undraw_Programming_re_kg9v.webp"
               alt=""
             />
           </div>
@@ -109,7 +109,7 @@
     <section id="about-section">
       <div class="container">
         <div class="about-image">
-          <img src="/images/about-img.jpg" alt="" srcset="" />
+          <img src="/images/about-img.webp" alt="" srcset="" />
         </div>
         <div class="about-content" data-aos="fade-right">
           <h2 class="title-heading"><span>About Me</span></h2>
@@ -138,7 +138,7 @@
       <div class="projects-cards container">
         <div class="project-card" data-aos="fade-up" data-aos-delay="100">
           <div class="projects-description">
-            <img src="/assets/project-1.png" alt="" class="project-img" />
+            <img src="/assets/project-1.webp" alt="" class="project-img" />
             <div class="layer">
               <p class="projects-icons">
                 <a
@@ -168,7 +168,7 @@
 
         <div class="project-card" data-aos="fade-up" data-aos-delay="200">
           <div class="projects-description">
-            <img src="/assets/project-1.png" alt="" class="project-img" />
+            <img src="/assets/project-1.webp" alt="" class="project-img" />
             <div class="layer">
               <p class="projects-icons">
                 <a
@@ -198,7 +198,7 @@
 
         <div class="project-card" data-aos="fade-up" data-aos-delay="300">
           <div class="projects-description">
-            <img src="/assets/project-1.png" alt="" class="project-img" />
+            <img src="/assets/project-1.webp" alt="" class="project-img" />
             <div class="layer">
               <p class="projects-icons">
                 <a
